--- a/Momon.Biju.Web/Areas/Admin/Views/Product/Create.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/Create.cshtml
@@ -9,65 +9,71 @@
     <link rel="stylesheet" href="~/css/customFileInput.css" asp-append-version="true"/>
 }
 
-<h2>Novo produto</h2>
+<div class="row justify-content-center">
+    <div class="col-lg-10">
+        <div class="card shadow-sm rounded">
+            <div class="card-body p-4">
+                <h2 class="mb-4 text-center">Novo Produto</h2>
 
-<form asp-action="Create" method="post" enctype="multipart/form-data">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <form asp-action="Create" method="post" enctype="multipart/form-data">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-    <div class="mb-3">
-        <label asp-for="Name" class="form-label"></label>
-        <input asp-for="Name" class="form-control"/>
-        <span asp-validation-for="Name" class="text-danger"></span>
+                    <div class="mb-3">
+                        <label asp-for="Name" class="form-label"></label>
+                        <input asp-for="Name" class="form-control"/>
+                        <span asp-validation-for="Name" class="text-danger small"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <label asp-for="Description" class="form-label"></label>
+                        <textarea asp-for="Description" style="resize:none;" rows="3" class="form-control"></textarea>
+                        <span asp-validation-for="Description" class="text-danger small"></span>
+                    </div>
+
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            <label asp-for="Price" class="form-label"></label>
+                            <input asp-for="Price" type="number" step="0.01" class="form-control" />
+                            <span asp-validation-for="Price" class="text-danger small"></span>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label asp-for="ReferenceNumber" class="form-label"></label>
+                            <input asp-for="ReferenceNumber" class="form-control" />
+                            <span asp-validation-for="ReferenceNumber" class="text-danger small"></span>
+                        </div>
+                    </div>
+
+                    <div class="mb-3">
+                        @await Component.InvokeAsync("CategorySelect", new { selectedCategoryId = Model.CategoryId })
+                        <span asp-validation-for="CategoryId" class="text-danger small"></span>
+                    </div>
+
+                    <div class="mb-4">
+                        <label class="form-label d-block">Imagem do Produto</label>
+                        <custom-file-input prop-name="ImagePath"></custom-file-input>
+                        <span asp-validation-for="ImagePath" class="text-danger small"></span>
+                    </div>
+
+                    <div class="mb-3">
+                        <select multiple="multiple" size="10" name="@nameof(EditProductViewModel.SubCategories)" id="duallistbox_subcategory">
+                            @foreach (var item in Model.SubCategoriesToSelect)
+                            {
+                                <option value="@item.Value">@item.Text</option>
+                            }
+                        </select>
+                        <span asp-validation-for="SubCategories" class="text-danger small"></span>
+                    </div>
+
+                    <div class="d-flex justify-content-between mt-4">
+                        <button type="submit" class="btn btn-primary">Salvar</button>
+                        <a asp-action="Index" class="btn btn-secondary">Cancelar</a>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-
-    <div class="mb-3">
-        <label asp-for="Description" class="form-label"></label>
-        <textarea asp-for="Description" style="resize:none;" rows="3" class="form-control"></textarea>
-        <span asp-validation-for="Description" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="Price" class="form-label"></label>
-        <input asp-for="Price" class="form-control" type="number" step="0.01"/>
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <label asp-for="ReferenceNumber" class="form-label"></label>
-        <input asp-for="ReferenceNumber" class="form-control"/>
-        <span asp-validation-for="ReferenceNumber" class="text-danger"></span>
-    </div>
-
-    <div class="mb-4">
-        <label asp-for="CategoryId" class="form-label"></label>
-        <select asp-for="CategoryId" asp-items="Model.CategoriesToSelect" class="form-select">
-            <option value="">Selecione a categoria</option>
-        </select>
-        <span asp-validation-for="CategoryId" class="text-danger"></span>
-    </div>
-
-    <div class="mb-3">
-        <custom-file-input prop-name="ImagePath"></custom-file-input>
-        <span asp-validation-for="ImagePath" class="text-danger"></span>
-    </div>
-    
-    <div class="mb-3">
-        <select multiple="multiple" size="10" name="SubCategories" id="duallistbox_subcategory">
-            @foreach (var item in Model.SubCategoriesToSelect)
-            {
-                <option value="@item.Value">@item.Text</option>
-            }
-        </select>
-        <span asp-validation-for="SubCategories" class="text-danger"></span>
-    </div>
-
-    <hr />
-
-    <div class="form-group">
-        <input type="submit" value="Salvar" class="btn btn-primary" />
-    </div>
-    <a asp-action="Index" class="btn btn-secondary ms-2">Cancel</a>
-</form>
+</div>
 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap4-duallistbox/dist/jquery.bootstrap-duallistbox.min.js"></script>
