managing active products

--- a/Momon.Biju.Web/Areas/Admin/Views/Product/Create.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/Create.cshtml
@@ -44,11 +44,20 @@
                         </div>
                     </div>
 
-                    <div class="mb-3">
-                        @await Component.InvokeAsync("CategorySelect", new { selectedCategoryId = Model.CategoryId })
-                        <span asp-validation-for="CategoryId" class="text-danger small"></span>
-                    </div>
+                    <div class="mb-3 row">
+                        <div class="col-md-6">
+                            @await Component.InvokeAsync("CategorySelect", new { selectedCategoryId = Model.CategoryId })
+                            <span asp-validation-for="CategoryId" class="text-danger small"></span>
+                        </div>
 
+                        <div class="col-md-6 d-flex align-items-center">
+                            <div class="form-check form-switch">
+                                <input asp-for="Active" type="checkbox" class="form-check-input" checked />
+                                <label asp-for="Active" class="form-check-label"></label>
+                            </div>
+                        </div>
+                    </div>
+                    
                     <div class="mb-4">
                         <label class="form-label d-block">Imagem do Produto</label>
                         <custom-file-input prop-name="ImagePath"></custom-file-input>
