ajusts for admin layout

--- a/Momon.Biju.Web/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Momon.Biju.Web/Areas/Admin/Views/Product/Edit.cshtml
@@ -54,7 +54,7 @@
                         </div>
 
                         <div class="col-md-6 d-flex align-items-center">
-                            <div class="form-check form-switch">
+                            <div class="mt-3 form-check form-switch">
                                 <input asp-for="Active" type="checkbox" class="form-check-input" checked="@(Model.Active)" />
                                 <label asp-for="Active" class="form-check-label"></label>
                             </div>
